Fix broken BidirectionalStreamTest in Cronet on iOS.

Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Bug: 836823, 829429
Change-Id: Id69a596b5d260ceec0794c6c6478ad01ce61a0da
Reviewed-on: https://chromium-review.googlesource.com/1028630
Reviewed-by: Ryan Hamilton <rch@chromium.org>
Commit-Queue: Misha Efimov <mef@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553832}
Former-commit-id: 2eb7d93ed08831863200e2bbc11ab52442139d86